--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -2,9 +2,11 @@
   <ItemGroup>
     <!-- Parsing -->
     <PackageVersion Include="Pidgin" Version="3.5.1" />
-
     <!-- Testing -->
+    <PackageVersion Include="ProjectFiles" Version="0.4.0" />
     <PackageVersion Include="TUnit" Version="1.6.28" />
     <PackageVersion Include="Verify.TUnit" Version="31.9.3" />
+    <!-- Code Analysis -->
+    <PackageVersion Include="Microsoft.CodeAnalysis.CSharp" Version="5.0.0" />
   </ItemGroup>
 </Project>
