--- a/tests/MermaidSharp.Tests/MermaidSharp.Tests.csproj
+++ b/tests/MermaidSharp.Tests/MermaidSharp.Tests.csproj
@@ -7,11 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ProjectFiles" />
     <PackageReference Include="TUnit" />
     <PackageReference Include="Verify.TUnit" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" />
     <ProjectReference Include="..\..\src\MermaidSharp\MermaidSharp.csproj" />
   </ItemGroup>
 
