--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -1,6 +1,7 @@
 <Project>
   <ItemGroup>
     <!-- Parsing -->
+    <PackageVersion Include="MarkdownSnippets.MsBuild" Version="27.0.2" />
     <PackageVersion Include="Microsoft.Playwright.NUnit" Version="1.57.0" />
     <PackageVersion Include="Pidgin" Version="3.5.1" />
     <!-- Testing -->
