--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -1,19 +1,16 @@
 <Project>
   <ItemGroup>
-    <!-- Parsing -->
     <PackageVersion Include="MarkdownSnippets.MsBuild" Version="27.0.2" />
     <PackageVersion Include="Microsoft.Playwright.NUnit" Version="1.57.0" />
     <PackageVersion Include="Pidgin" Version="3.5.1" />
-    <!-- Testing -->
     <PackageVersion Include="NUnit" Version="4.4.0" />
     <PackageVersion Include="NUnit3TestAdapter" Version="5.2.0" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
     <PackageVersion Include="ProjectDefaults" Version="1.0.170" />
     <PackageVersion Include="ProjectFiles" Version="0.4.0" />
+    <PackageVersion Include="Verify.ImageSharp.Compare" Version="3.0.2" />
     <PackageVersion Include="Verify.NUnit" Version="31.9.3" />
-    <!-- Code Analysis -->
     <PackageVersion Include="Microsoft.CodeAnalysis.CSharp" Version="5.0.0" />
-    <!-- SVG to PNG conversion via browser -->
     <PackageVersion Include="Microsoft.Playwright" Version="1.57.0" />
   </ItemGroup>
 </Project>
