--- a/src/Naiad/Naiad.csproj
+++ b/src/Naiad/Naiad.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Msagl" />
     <PackageReference Include="Pidgin" />
     <PackageReference Include="ProjectDefaults" PrivateAssets="all" />
   </ItemGroup>
