--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -9,8 +9,13 @@
     <PackageVersion Include="ProjectDefaults" Version="1.0.172" />
     <PackageVersion Include="ProjectFiles" Version="0.5.0" />
     <PackageVersion Include="Verify.ImageSharp.Compare" Version="3.0.3" />
-    <PackageVersion Include="Verify.NUnit" Version="31.12.4" />
+    <PackageVersion Include="Verify.NUnit" Version="31.12.5" />
     <PackageVersion Include="Microsoft.CodeAnalysis.CSharp" Version="5.0.0" />
     <PackageVersion Include="Microsoft.Playwright" Version="1.58.0" />
+    <PackageVersion Include="Argon" Version="0.33.5" />
+    <PackageVersion Include="DiffEngine" Version="18.4.1" />
+    <PackageVersion Include="EmptyFiles" Version="8.17.2" />
+    <PackageVersion Include="SimpleInfoName" Version="3.2.0" />
+    <PackageVersion Include="Verify" Version="31.12.5" />
   </ItemGroup>
 </Project>
